--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <div class="funcionamiento">
                 <h2>¿Como Funciona?</h2>
                 <iframe class="funcionamiento__video" width="560" height="315" src="https://www.youtube.com/embed/S3O2ehqDuJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quae dolorum iure porro vitae qui quos ipsa eligendi tempora distinctio.</p>
+                <p>Las impresoras 3D imprimen los objetos por capas, imprimiendo cada una encima de la otra en un proceso donde cada vez el modelo real va ganando más altura. Al contrario de otros métodos de impresión de objetos no estamos hablando de fundir un objeto en un molde o esculpir sobre una piedra.</p>
             </div>
         
             <div class="taller">
                 <h2>Nuestro Taller</h2>
                 <img class="taller__img" src="./img/impresoras.jpeg" alt="taller">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aut molestias consequatur quo unde voluptatum ullam sed blanditiis facere neque illo perspiciatis voluptate atque delectus laboriosam, saepe quam dignissimos omnis?</p>
+                <p>En esta imagen les mostramos un poco de nuestra area de trabajo, contamos con distintas impresoras 3D y nuestras herramientas especificas para el respectivo mantenimiento de nuestras maquinas.</p>
             </div>
             
             <div class="datos">
                 <h2>Datos Curiosos</h2>
                 <img class="datos__img" src="./img/nasa.jpg" alt="Nasa">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium accusamus numquam neque, optio porro ad maxime officiis, soluta veniam debitis explicabo quidem ducimus quas ex consequatur consequuntur doloribus, cumque inventore esse! Alias explicabo expedita, veniam nulla enim voluptatem itaque nemo</p>
+                <p>Sabias que la nasa utiliza impresoras 3D en el espacio? Si! asi es! Hacen objetos que no pueden llevarse desde aca, como las plantillas de descanso para los astronautas!</p>
             </div>
 
         </div>
