--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina WEB de un emprendimiento de impresoras 3D, cuenta con catalogo y pagina de contacto para realizar consultas, sugerencias y/o pedidos.">
+
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -95,7 +97,7 @@
                 
             <h5>Mapa del Sitio</h5>
             
-            <ul>
+            <ul class="mapa-links">
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./html/materiaprima.html">Materia Prima</a></li>
                 <li><a href="./html/catalogo.html">Catalogo</a></li>
